--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
+body{
+    background-image: url(./images/cows.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    opacity: 0.1;
+}
 table ,th ,td{
     border: 2px solid black;
 }
